# rk-fingerprint

./: .gitmodules  CMakeLists.txt  benchmark.cpp  benchmark_WIP.cpp
rolling_hash/: fingerprinting.hpp  rk_prime.hpp  rk_prime_constbase.hpp
